Saving new changes made to resume document

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <a href="#contact" class="nav-buttons">Contact</a>
             </li>
             <li>
-                <a href="./Assets/docs/My-Resume.pdf" download="My-Resume" class="nav-buttons">Resume</a>
+                <a href="./Assets/docs/current-resume.pdf" download="current-resume" class="nav-buttons">Resume</a>
             </li>
         </ul>
         <section class="socials-container">
