--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
                 <h3 class="project-title">
                     Dewy
                 </h3>
-                <a href="#" target="_blank">
-                    <img src="https://images.pexels.com/photos/4259092/pexels-photo-4259092.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="Image for WatchHub Project" style="height: 300px; width: 300px;" class="grow prj">
+                <a href="https://dewy-skin.netlify.app/" target="_blank">
+                    <img src="./Assets/images/Dewy-App.PNG" alt="Image for Dewy Project" style="height: 300px; width: 300px;" class="grow prj">
                 </a>
                 <br>
                 <br>
