Saving changes made to img for dewy project

--- a/index.html
+++ b/index.html
@@ -124,12 +124,12 @@
                     Dewy
                 </h3>
                 <a href="https://dewy-skin.netlify.app/" target="_blank">
-                    <img src="./Assets/images/Dewy-App.PNG" alt="Image for Dewy Project" style="height: 300px; width: 300px;" class="grow prj">
+                    <img src="./Assets/images/Dewy-App.PNG" alt="Image for Dewy Project" style="height: 300px; width: 300px;" class="grow prj prj-img">
                 </a>
                 <br>
                 <br>
                 <p style=" width: 300px;" class="prj">
-                    Dewy is a skincare application that allows users to take a quiz to curate a specificed skincare routine that suits their needs. (In-Progess)
+                    Dewy is a skincare application that allows users to take a quiz to curate a specificed skincare routine that suits their needs.
                     <br>
                     <br>
                     <strong>Technologies</strong>: MongoDB, Expressjs, React, NodeJs
